--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "vue-router": "^3.0.1",
     "axios": "^0.16.1",
     "vue-lazyload": "^1.0.3",
-    "create-keyframe-animation": "^0.1.0"
+    "create-keyframe-animation": "^0.1.0",
+    "js-base64": "^2.4.1",
+    "lyric-parser": "^1.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
