--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "player",
   "author": "WC12576 <1406064025@qq.com>",
   "private": true,
+  "homepage": "https://wc12576.github.io/vue-music/dist",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
